--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/web/css/source/module/_listings.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/web/css/source/module/_listings.less
@@ -333,8 +333,8 @@
                 height: 40px;
                 border-radius: 4px;
                 color: #ffffff;
-                background-color: #155da4;
-                border-color: #155da4;
+                background-color: #999999;
+                border-color: #999999;
                 cursor: not-allowed;
                 span {
                     display: flex;
