--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/_minicart.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/_minicart.less
@@ -105,6 +105,10 @@
                             &:extend(.abs-button-l all);
                             display: block;
                             width: 100%;
+                            font-size: 16px;
+                            line-height: 19px;
+                            margin-bottom: 0;
+                            padding: 14.5px 17px;
                             &:hover{
                                 .abs-style(#ffffff, #4F85BB, #4F85BB);
                             }
