--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/web/css/source/module/_collapsible_navigation.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/web/css/source/module/_collapsible_navigation.less
@@ -81,6 +81,8 @@
         strong {
             border-bottom: 2px solid #155DA4;
             padding-bottom: 8px;
+            font-family: 'roboto-medium' !important;
+            line-height: 19px !important;
         }
     }
 }
