--- a/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
@@ -1701,3 +1701,10 @@ strong#block-crosssell-heading:before {
     display: none;
 }
 .product-main-content{ margin-bottom: 0; }
+
+.evercrumbs .breadcrumbs .items li:last-child {
+    max-width: 30vw;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
