--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_footer.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_footer.less
@@ -132,6 +132,9 @@
 			//&:hover{
 			//	.abs-cssall(@btn_hover_text,  @btn_hover_background, @btn_hover_background );
 			//}
+            &:active{
+                .abs-style(#ffffff, #10477D, #10477D);
+            }
 		}
 		.field .control{
 			margin-right:-1px;
@@ -146,6 +149,8 @@
                 width: 64vw;
                 border-radius: 4px 0 0 4px;
                 height: 48px;
+                font-size: 16px;
+                line-height: 19px;
 				&::-webkit-input-placeholder {
                     color: #999999;
                     font-size: 16px;
