--- a/app/design/frontend/Codazon/fastest/hightech3/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/Magento_Catalog/web/css/source/_module.less
@@ -1689,8 +1689,8 @@ strong#block-crosssell-heading:before {
 .review-title-mobile{
     display: none;
 }
-.product-main-content{ 
-    margin-bottom: 0; 
+.product-main-content{
+    margin-bottom: 0;
 }
 @media screen and ( width: 1024px ) {
     .related .owl-stage .owl-item {
@@ -1719,4 +1719,11 @@ strong#block-crosssell-heading:before {
     .crosssell .owl-stage-outer {
         padding: 0 !important;
     }
+}
+
+.evercrumbs .breadcrumbs .items li:last-child {
+    max-width: 20vw;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
