--- a/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_footer.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_footer.less
@@ -137,6 +137,9 @@
 			//&:hover{
 			//	.abs-cssall(@btn_hover_text,  @btn_hover_background, @btn_hover_background );
 			//}
+            &:active{
+                .abs-style(#ffffff, #10477D, #10477D);
+            }
 		}
 		.field .control{
 			margin-right:-1px;
@@ -150,6 +153,8 @@
                 padding: 12px 16px;
                 width: 100%;
                 border-radius: 4px;
+                font-size: 14px;
+                line-height: 16px;
 				&::-webkit-input-placeholder {
 				   color: #999999;
 				   font-size: 14px;
