--- a/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_homestore.less
@@ -495,8 +495,10 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 			border-bottom:3px solid @main_hover_text;
 			padding-bottom: 8px;
 			margin-bottom: -1px;
-			font:@f_h4;
 			.lib-css(color, @main_title_text);
+            font-family: 'roboto-medium';
+            font-size: 16px;
+            line-height: 19px;
 		}
 	}
 	.owl-carousel .owl-nav{
@@ -627,6 +629,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 					border:0;
 					position:relative;
 					.abs-borderradius(0.1s ease);
+                    font-family: 'roboto-medium';
 					&:after{
 						content:"";
 						height:3px;
@@ -1314,7 +1317,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 	}
 	.page-main .sidebar .block:not(.block-static-block) .block-title{
 		font-size:14px;
-		padding:7px 10px;
+        padding:10.5px 10px;
 	}
 	.product-list-style02 .products-list .product-item{
 		padding:5px 0;
