--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_footer.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_footer.less
@@ -156,6 +156,8 @@
                 padding: 12px 16px;
                 width: 192px;
                 border-radius: 4px 0 0 4px;
+                font-size: 14px;
+                line-height: 16px;
 				&::-webkit-input-placeholder {
 				   color: #999999;
 				   font-size: 14px;
