--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_header.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_header.less
@@ -262,7 +262,9 @@
 						//float: none;
 						//vertical-align: top;
 						> a.menu-link{
-							padding: 20px 20px;
+                            padding: 13px 20px;
+                            font-size: 14px;
+                            line-height: 16px;
 						}
 
 					}
@@ -339,6 +341,8 @@
                         .input-text {
                             border-radius: 4px 0 0 4px;
                             color: #333333;
+                            font-size: 14px;
+                            line-height: 16px;
                         }
                     }
                 }
