--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
@@ -255,9 +255,11 @@
 	.left-navigation{
 		margin-top:0;
 		.navigation .menu-title{
-			padding:19px 10px 19px 20px;
-			min-height:60px;
+            padding: 11px 10px 11px 20px;
+            min-height: 44px;
             color: #ffffff;
+            font-size: 14px;
+            line-height: 20px;
 		}
 		.cdz-vertical-menu{
 			display:none;
@@ -479,8 +481,10 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 			border-bottom:3px solid @main_hover_text;
 			padding-bottom: 10px;
 			margin-bottom: -1px;
-			font:@f_h4;
 			.lib-css(color, @main_title_text);
+            font-family: 'roboto-medium';
+            font-size: 16px;
+            line-height: 19px;
 		}
 	}
 	.owl-carousel .owl-nav{
@@ -641,6 +645,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 					border:0;
 					position:relative;
 					.abs-borderradius(0.1s ease);
+                    font-family: 'roboto-medium';
 					&:after{
 						content:"";
 						height:3px;
