--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_blocksidebar.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_blocksidebar.less
@@ -73,6 +73,9 @@
 				margin-bottom:0;
 				min-width:100%;
 				.abs-borderradius(@block__radius @block__radius 0 0);
+                font-family: 'roboto-medium';
+                font-size: 16px;
+                line-height: 19px;
 				&:before{ display:none;}
 				strong{
 					.lib-css(font, @block-title__font);
