--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_header.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_header.less
@@ -764,6 +764,8 @@
 					.abs-borderradius(4px);
 					padding: 0 15px;
                     font-style: unset;
+                    font-size: 16px;
+                    line-height: 1.5;
 				}
                 input[type="text"]::placeholder {
                     color: #999999;
@@ -836,13 +838,19 @@
                     width: 16px;
                     height: 16px;
                     min-width: 16px;
-                    line-height: 14px;
+                    line-height: 100%;
                     background: #FBB500;
                     border: none;
                     color: #fff;
                     font-size: 12px;
                     position: absolute;
                     border-radius: 100%;
+                    .counter-number {
+                        height: 100%;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                    }
                     .counter-label {
                         display: none;
                     }
