--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_homestore.less
@@ -458,8 +458,10 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 			border-bottom:3px solid @main_hover_text;
 			padding-bottom: 8px;
 			margin-bottom: -1px;
-			font:@f_h4;
 			.lib-css(color, @main_title_text);
+            font-family: 'roboto-medium';
+            font-size: 16px;
+            line-height: 19px;
 		}
 	}
 	.owl-carousel .owl-nav{
@@ -1419,6 +1421,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
                 border-bottom: 3px solid #155da4;
                 padding-bottom: 8px;
                 display: inline-block;
+                font-family: 'roboto-medium';
             }
         }
         .block-content {
@@ -1471,6 +1474,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
                 border-bottom: 3px solid #155da4;
                 padding-bottom: 8px;
                 display: inline-block;
+                font-family: 'roboto-medium';
             }
         }
         .block-content {
