--- a/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_blocksidebar.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_blocksidebar.less
@@ -69,10 +69,13 @@
 				.abs-csscbf(@block-title__text, @block-title__background, @block-title__font);
 				text-transform:none;
 				position:relative;
-				padding:9px 20px;
+                padding: 10.5px 20px;
 				margin-bottom:0;
 				min-width:100%;
 				.abs-borderradius(@block__radius @block__radius 0 0);
+                font-family: 'roboto-medium';
+                font-size: 16px;
+                line-height: 19px;
 				&:before{ display:none;}
 				strong{
 					.lib-css(font, @block-title__font);
