--- a/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_header.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_header.less
@@ -599,6 +599,8 @@
                     .abs-borderradius(4px);
                     padding: 0 15px;
                     font-style: unset;
+                    font-size: 16px;
+                    line-height: 1.5;
                 }
                 input[type="text"]::placeholder {
                     color: #999999;
