--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/templates/html/copyright.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/templates/html/copyright.phtml
@@ -13,7 +13,7 @@
             <a style="color: #ffffff;" href="/privacy-policy">Privacy Policy</a>
         </span>
         <span class="footer-span" style="margin-right: 12px;">
-            <a style="color: #ffffff;" href="#">Terms of Service</a>
+            <a style="color: #ffffff;" href="/terms-of-service">Terms of Service</a>
         </span>
     </div>
 </small>
