--- a/app/design/frontend/Codazon/fastest/hightech3/Magento_LayeredNavigation/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/Magento_LayeredNavigation/web/css/source/_module.less
@@ -198,12 +198,14 @@
 					line-height: 13px;
 					font-size: 10px;
 					padding: 0 2px;
-					margin-left: 2px;
+					margin-left: 5px;
 					vertical-align: text-top;
 					.abs-opacity(0.5);
 					font-family: arial;
 					min-width: 15px;
 					text-align: center;
+                    position: relative;
+                    top: 3px;
                     &:before {
                         //content: '(';
                     }
