change sidebar style.

--- a/app/design/frontend/Codazon/fastest/fashion/Magento_LayeredNavigation/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_LayeredNavigation/web/css/source/_module.less
@@ -230,6 +230,9 @@
 								width:50px;
 							}
 						}
+                        .delimiter {
+                            margin-left: 4px;
+                        }
 					}
 					.action{
 						display:inline-block;
