--- a/app/design/frontend/Codazon/fastest/fashion/Magento_LayeredNavigation/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_LayeredNavigation/web/css/source/_module.less
@@ -231,7 +231,7 @@
 							}
 						}
                         .delimiter {
-                            margin-left: 4px;
+                            margin:0 4px;
                         }
 					}
 					.action{
