change footer,contact us,cart style.

--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/_cart.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/_cart.less
@@ -215,7 +215,7 @@
 			.abs-borderradius(@border-radius);
 		}
         &.table-wrapper {
-			margin-bottom:0;
+			margin-bottom: 24px;
             width: 776px;
             border-radius: 4px;
             box-shadow: none;
@@ -332,6 +332,7 @@
                     }
                 }
                 .action-edit {
+                    display: none;
                     width: 46px;
                     right: 120px;
                     margin-right: 0;
