--- a/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
@@ -1631,6 +1631,10 @@ strong#block-related-heading:before {
     -webkit-backface-visibility: unset !important;;
     backface-visibility: unset !important;;
 }
+.block.crosssell {
+    margin-top: 0 !important;
+    margin-bottom: 40px !important;
+}
 .crosssell .title{
     background: #ffffff !important;
     padding: 20px 0 12px 20px !important;
