--- a/app/design/frontend/Codazon/fastest/hightech3/Magento_Checkout/web/css/source/module/_cart.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/Magento_Checkout/web/css/source/module/_cart.less
@@ -262,7 +262,7 @@
 			.abs-borderradius(@border-radius);
 		}
         &.table-wrapper {
-			margin-bottom:0;
+            margin-bottom: 24px;
             padding: 16px 15px;
             border-radius: 4px;
             box-shadow: none;
@@ -379,6 +379,7 @@
                     }
                 }
                 .action-edit {
+                    display: none;
                     width: 46px;
                     right: 120px;
                     margin-right: 0;
