--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Checkout/web/css/source/module/_cart.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Checkout/web/css/source/module/_cart.less
@@ -548,6 +548,7 @@
         &.table-wrapper {
             border-top: none;
             padding: 0 15px;
+            margin-bottom: 8px;
             thead {
                 .col {
                     &.item,
@@ -652,6 +653,7 @@
             .actions-toolbar {
                 top: -20px;
                 .action-edit {
+                    display: none;
                     width: 18.1vw;
                     position: relative;
                     right: 16px;
@@ -664,7 +666,8 @@
                 }
                 .action-delete {
                     width: 78px;
-                    left: 20.5vw;
+                    position: relative;
+                    left: -14px;
                     span {
                         font-size: 14px;
                         line-height: 16px;
