change brand style.

--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_LayeredNavigation/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_LayeredNavigation/web/css/source/_module.less
@@ -749,6 +749,9 @@
 			}
 		}
 	}
+    .filter-options-item.manufacturer {
+        display: none;
+    }
 	.page-products .page-main .columns{
 		padding-top: 60px;
 	}
