add facebook pixcel & change loader style.

--- a/app/code/Codazon/OneStepCheckout/view/frontend/web/template/shipping-method.html
+++ b/app/code/Codazon/OneStepCheckout/view/frontend/web/template/shipping-method.html
@@ -52,6 +52,21 @@
         border-color: #10477d;
         background: #10477d;
     }
+    #checkout-payment-method-load > div > div > div:nth-child(2) > div.payment-method-title.field.choice > label > a > span {
+        display: none;
+    }
+    .osc .checkout-payment-method .payment-method-title {
+        padding: 0 0 10px;
+    }
+    #checkout-payment-method-load > div > div > div.payment-method.stripe-payments._active > div.payment-method-title.field.choice > label > span.stripe-icon-container.right, #checkout-payment-method-load > div > div > div.payment-method.stripe-payments > div.payment-method-title.field.choice > label > span.stripe-icon-container.right {
+        float: unset;
+        display: block;
+        margin-top: 10px;
+        padding-left: 21px;
+    }
+    .stripe-elements-field {
+        padding: 5px 10px;
+    }
 </style>
 <!--Shipping method template-->
 <li id="opc-shipping_method"
