--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/_minicart.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/_minicart.less
@@ -94,7 +94,7 @@
             > .actions {
                 margin-top: 15px;
                 > .secondary {
-                    text-align: left;
+                    text-align: center;
                     font-size: 16px;
                     line-height: 19px;
                 }
