--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/_loaders.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/_loaders.less
@@ -36,6 +36,14 @@
         > .loading-mask {
             z-index: @loader-overlay__z-index;
         }
+        .loading-mask {
+            background: #ffffff80;
+        }
+    }
+    .checkout-cart-index {
+        .loading-mask {
+            position: fixed !important;
+        }
     }
 
     ._block-content-loading {
