--- a/app/design/frontend/Codazon/fastest/hightech3/Magento_Checkout/web/css/source/module/_cart.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/Magento_Checkout/web/css/source/module/_cart.less
@@ -288,7 +288,7 @@
                     display: flex;
                 }
             }
-            #shopping-cart-table tbody:nth-last-child(2){
+            #shopping-cart-table tbody:nth-last-child(2), #shopping-cart-table tbody:last-child{
                 border-bottom: none;
             }
             .col {
