--- a/app/code/Aheadworks/Sarp2/view/frontend/web/template/minicart/item/default.html
+++ b/app/code/Aheadworks/Sarp2/view/frontend/web/template/minicart/item/default.html
@@ -49,7 +49,7 @@
                     <dl class="product options list">
                         <!-- ko foreach: { data: options, as: 'option' } -->
                         <div class="minicart-option">
-                            <dt class="label"><!-- ko text: option.label --><!-- /ko --></dt>
+                            <dt class="label"><!-- ko text: option.label --><!-- /ko --></dt>:
                             <dd class="values">
                                 <!-- ko if: Array.isArray(option.value) -->
                                     <span data-bind="html: option.value.join('<br>')"></span>
