--- a/app/code/Codazon/Shopbybrandpro/view/frontend/web/css/source/_js-class.less
+++ b/app/code/Codazon/Shopbybrandpro/view/frontend/web/css/source/_js-class.less
@@ -44,11 +44,15 @@
 }
 
 .double-bounce-spinner {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     position: relative;
     margin: 100px auto;
+    background:url(../images/new_loading.gif) center center no-repeat;
+    width:100%;
+    background-size: 64px;
     .double-bounce1, .double-bounce2 {
+        display: none;
         width: 100%;
         height: 100%;
         border-radius: 50%;
@@ -57,7 +61,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        
+
         -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
         animation: sk-bounce 2.0s infinite ease-in-out;
     }
@@ -74,10 +78,10 @@
 }
 
 @keyframes sk-bounce {
-  0%, 100% { 
+  0%, 100% {
     transform: scale(0.0);
     -webkit-transform: scale(0.0);
-  } 50% { 
+  } 50% {
     transform: scale(1.0);
     -webkit-transform: scale(1.0);
   }
