--- a/app/code/Codazon/Slideshow/view/frontend/templates/slideshow.phtml
+++ b/app/code/Codazon/Slideshow/view/frontend/templates/slideshow.phtml
@@ -8,12 +8,12 @@
 .tripple-bounce-spinner > div {
   width: 18px;
   height: 18px;
-  background-color: #333;
+  background-color: #155DA4;
 
   border-radius: 100%;
   display: inline-block;
-  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  -webkit-animation: sk-bouncedelay 2s infinite ease-in-out both;
+  animation: sk-bouncedelay 2s infinite ease-in-out both;
 }
 
 .tripple-bounce-spinner .bounce1 {
@@ -32,10 +32,10 @@
 }
 
 @keyframes sk-bouncedelay {
-  0%, 80%, 100% { 
+  0%, 80%, 100% {
     -webkit-transform: scale(0);
     transform: scale(0);
-  } 40% { 
+  } 40% {
     -webkit-transform: scale(1.0);
     transform: scale(1.0);
   }
@@ -52,7 +52,7 @@
 }
 </style>
 <?php if($_slideShow = $block->getSlideshowData()): ?>
-<?php 
+<?php
 $_slideshowHelper = $this->helper('Codazon\Slideshow\Helper\Data');
 $_helperImage = $this->helper('Codazon\Slideshow\Helper\Image');
 $_images = $_slideshowHelper->decodeJson($_slideShow['content']);
@@ -63,7 +63,7 @@ $height = $_parameters['height'] ? $_parameters['height'] : 500;
 ?>
 <?php if($_images): ?>
 <?php $_firstImage = current($_images); ?>
-<div class="cdz-slideshow">        
+<div class="cdz-slideshow">
         <div class="slider-wrapper theme-default loading" style="min-height:<?php echo $height ?>px">
         	<div class="slider-item f-image">
                 <div class="slideshow tripple-bounce-spinner">
@@ -74,62 +74,62 @@ $height = $_parameters['height'] ? $_parameters['height'] : 500;
             </div>
             <div class="owl-carousel owl-theme <?php echo $classid ?>">
                 <?php if(isset($_parameters['is_resize']) && $_parameters['is_resize']): ?>
-                    <?php $i=0; foreach ($_images as $key => $_image): ?>                
+                    <?php $i=0; foreach ($_images as $key => $_image): ?>
                         <?php if($_image['disabled'] == 0): ?>
                         <div class="slider-item">
                             <?php if($_image['link']): ?>
                             <a href="<?php echo $_image['link'] ?>">
-                            <?php endif; ?>                                                   
-                                <img 
-                                <?php if($_parameters['lazyLoad'] && $i!=0): ?>                             
-                                src="<?php echo $_helperImage->init($_firstImage['file'])->resize($width,$height); ?>" class="owl-lazy" data-src='<?php echo $_helperImage->init($_image['file'])->resize($width,$height); ?>'                             
-                                <?php else: ?> 
+                            <?php endif; ?>
+                                <img
+                                <?php if($_parameters['lazyLoad'] && $i!=0): ?>
+                                src="<?php echo $_helperImage->init($_firstImage['file'])->resize($width,$height); ?>" class="owl-lazy" data-src='<?php echo $_helperImage->init($_image['file'])->resize($width,$height); ?>'
+                                <?php else: ?>
                                 src='<?php echo $_helperImage->init($_image['file'])->resize($width,$height); ?>'
-                                <?php endif; ?> 
-                                <?php if ($_parameters['controlNavThumbs']): ?> data-hash="<?php echo $classid.$key ?>" <?php endif; ?> alt="<?php echo $_image['link'] ?>" title="<?php echo $_image['link'] ?>" 
-                                
+                                <?php endif; ?>
+                                <?php if ($_parameters['controlNavThumbs']): ?> data-hash="<?php echo $classid.$key ?>" <?php endif; ?> alt="<?php echo $_image['link'] ?>" title="<?php echo $_image['link'] ?>"
+
                                 />
-                            
+
                             <?php if($_image['link']): ?>
                             </a>
                             <?php endif; ?>
-                            <div class="cdz-slideshow-description">                            
+                            <div class="cdz-slideshow-description">
                                     <div class="<?php echo $_image['transition'] ?> cdz-owlcarousel-des">
                                         <?php echo $_slideshowHelper->filterTemplate($_image['caption']) ?>
-                                    </div>                            
+                                    </div>
                             </div>
                         </div>
                         <?php endif; ?>
-                        
+
                     <?php $i++;endforeach; ?>
                 <?php else: ?>
-                    <?php $i=0; foreach ($_images as $key => $_image): ?>                
+                    <?php $i=0; foreach ($_images as $key => $_image): ?>
                         <?php if($_image['disabled'] == 0): ?>
                         <div class="slider-item">
                             <?php if($_image['link']): ?>
                             <a href="<?php echo $_image['link'] ?>">
-                            <?php endif; ?>                                                   
-                                <img 
-                                <?php if($_parameters['lazyLoad'] && $i!=0): ?>                             
-                                src="<?php echo $_helperImage->init($_firstImage['file'])->resize($width,$height); ?>" class="owl-lazy" data-src='<?php echo $block->getMediaUrl().'codazon/slideshow'.$_image['file']; ?>'                             
-                                <?php else: ?> 
+                            <?php endif; ?>
+                                <img
+                                <?php if($_parameters['lazyLoad'] && $i!=0): ?>
+                                src="<?php echo $_helperImage->init($_firstImage['file'])->resize($width,$height); ?>" class="owl-lazy" data-src='<?php echo $block->getMediaUrl().'codazon/slideshow'.$_image['file']; ?>'
+                                <?php else: ?>
                                 src='<?php echo $block->getMediaUrl().'codazon/slideshow'.$_image['file']; ?>'
-                                <?php endif; ?> 
-                                <?php if ($_parameters['controlNavThumbs']): ?> data-hash="<?php echo $classid.$key ?>" <?php endif; ?> alt="<?php echo $_image['link'] ?>" title="<?php echo $_image['link'] ?>" 
-                                
+                                <?php endif; ?>
+                                <?php if ($_parameters['controlNavThumbs']): ?> data-hash="<?php echo $classid.$key ?>" <?php endif; ?> alt="<?php echo $_image['link'] ?>" title="<?php echo $_image['link'] ?>"
+
                                 />
-                            
+
                             <?php if($_image['link']): ?>
                             </a>
                             <?php endif; ?>
-                            <div class="cdz-slideshow-description">                            
+                            <div class="cdz-slideshow-description">
                                     <div class="<?php echo $_image['transition'] ?> cdz-owlcarousel-des">
                                         <?php echo $_slideshowHelper->filterTemplate($_image['caption']) ?>
-                                    </div>                            
+                                    </div>
                             </div>
                         </div>
                         <?php endif; ?>
-                        
+
                     <?php $i++;endforeach; ?>
                 <?php endif ?>
             </div>
@@ -137,7 +137,7 @@ $height = $_parameters['height'] ? $_parameters['height'] : 500;
                 <?php
                     $thumgWidth = $_parameters['thumbWidth'] ? $_parameters['thumbWidth'] : 100;
                     $thumbHeight = $_parameters['thumbHeight'] ? $_parameters['thumbHeight'] : 100;
-                ?>                                               
+                ?>
                 <?php foreach ($_images as $key => $_image): ?>
                     <?php if($_image['disabled'] == 0): ?>
                         <a class="slider-thumbnail" href="#<?php echo $classid.$key ?>">
@@ -148,23 +148,23 @@ $height = $_parameters['height'] ? $_parameters['height'] : 500;
              <?php endif; ?>
         </div>
 
-</div>    
+</div>
 
     <script type="text/javascript">
     require(['jquery','owlSlider','domReady!'],function($){
-    	var owl = $('.<?php echo $classid ?>');    	
+    	var owl = $('.<?php echo $classid ?>');
     	if(owl.length){
-    		owl.on('initialized.owl.carousel', function(e) {	        	
-	        	var parentDiv = $(this).parent();		        	
-	        	if(parentDiv.hasClass('loading')) 
+    		owl.on('initialized.owl.carousel', function(e) {
+	        	var parentDiv = $(this).parent();
+	        	if(parentDiv.hasClass('loading'))
 	        	{
 	        		parentDiv.removeClass('loading');
 	        		parentDiv.removeAttr('style');
-	        	}        
-	        	var firstImage = parentDiv.find('div.f-image'); 
+	        	}
+	        	var firstImage = parentDiv.find('div.f-image');
 	        	firstImage.fadeTo('slow',1000);
 	        	firstImage.remove();
-	        	
+
 			});
 	        owl.owlCarousel({
 	            animateOut: "<?php echo $_parameters['animateOut'] ?>",
@@ -174,20 +174,20 @@ $height = $_parameters['height'] ? $_parameters['height'] : 500;
 	            //center: true,
 	            //rewind: false,
 	            startPosition: <?php echo $_parameters['startPosition'] ? $_parameters['startPosition'] : '0' ?>,
-	            rtl: ThemeOptions.rtl_layout == 1 ? true : false,                                   
-	
+	            rtl: ThemeOptions.rtl_layout == 1 ? true : false,
+
 	            autoplay : <?php echo ($_parameters['autoplay'] == 0) ? 'false' : 'true' ?>,
-	            
+
 	            autoplayHoverPause : <?php echo ($_parameters['autoplayHoverPause'] == 0) ? 'false' : 'true' ?>,
 	            autoplayTimeout: <?php echo ($_parameters['autoplaySpeed'] == 0) ? '3000' : $_parameters['autoplaySpeed'] ?>,
 	            nav: <?php echo ($_parameters['nav'] == 0) ? 'false' : 'true' ?>,
 	            dots: <?php echo ($_parameters['dots'] == 0) ? 'false' : 'true' ?>,
 	            lazyLoad: <?php echo ($_parameters['lazyLoad'] == 0) ? 'false' : 'true' ?>,
 	            URLhashListener: <?php echo ($_parameters['controlNavThumbs'] == 0) ? 'false' : 'true' ?>,
-	                        
-	        });	        	     
+
+	        });
     	}
-    });           
+    });
     </script>
     <?php endif; ?>
 <?php endif; ?>
