change product info style.

--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/_tables.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/_tables.less
@@ -67,6 +67,11 @@
                     > td.col.qty {
                         text-align: left;
                     }
+                    td[data-th] {
+                        &:before {
+                            display: none;
+                        }
+                    }
                 }
             }
             &.additional-attributes {
