--- a/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
@@ -1077,6 +1077,8 @@
 & when (@media-common = true) {
 
     .block.related {
+        margin-top: 0 !important;
+        margin-bottom: 24px !important;
         .action.select {
             &:extend(.abs-action-button-as-link all);
             vertical-align: top;
@@ -1704,7 +1706,7 @@ strong#block-crosssell-heading:before {
 .review-title-mobile{
     display: none;
 }
-.product-main-content{ margin-bottom: 0; }
+.product-main-content{ margin-bottom: 24px; }
 
 .evercrumbs .breadcrumbs .items li:last-child {
     max-width: 30vw;
