--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
@@ -190,15 +190,16 @@
 		&.last{
 			border-bottom:0;
             margin-bottom: 12px;
-            background: #ffffff;
+            background: #33333340;
             padding: 0;
+            border-radius: 4px;
 		}
 		a{
 			.abs-link(@main_text, @main_text);
 			span{
                 display:block;
-                padding: 24px;
-                height: 48px;
+                padding: 20px;
+                height: 24px;
             }
 			.fa{
 				margin-bottom:5px;
@@ -210,12 +211,12 @@
             .chat {
                 &:before{
                     font-family: 'icomoon';
-                    font-size:32px;
+                    font-size:28px;
                     content: '\e91d';
                     position: absolute;
-                    left: 9px;
-                    top: 3px;
-                    color: #155DA4;
+                    left: 7px;
+                    top: 2px;
+                    color: #ffffff;
                 }
             }
 		}
@@ -1096,11 +1097,12 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 	border-color:#155DA4 !important;
 }
 #back-top a{
-	background:#ffffff !important;
+	background:transparent !important;
 	border-color:#ffffff !important;
     color:#333333 !important;
-    padding: 8px;
+    padding: 6px;
     border: none;
+    border-radius: 4px;
 	&:hover{
 		//background:#ffffff !important;
 		//color:#333333 !important;
@@ -1116,8 +1118,8 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
         content: '\e916';
-        font-size: 32px;
-        color: #155DA4;
+        font-size: 28px;
+        color: #ffffff;
     }
 }
 #back-top {
