--- a/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_homestore.less
@@ -1058,27 +1058,31 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 	background:#155DA4 !important;
 	border-color:#155DA4 !important;
 }
-#back-top a{
-	background:#155DA4 !important;
-	border-color:#155DA4 !important;
-    border-radius: 4px;
-    padding: 10px;
-	&:hover{
-		background:#155DA4 !important;
-		color:#ffffff !important;
-		border-color:#155DA4 !important;
-	}
-    &:before{
-        display: inline-block;
-        font-family: 'icomoon';
-        font-style: normal;
-        font-weight: normal;
-        line-height: 1;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-        content: '\e916';
-        font-size: 16px;
-        color: #fff;
+#back-top {
+    right: 12px;
+    bottom: 10vh;
+    a{
+        background:#33333340 !important;
+        border-radius: 4px;
+        padding: 8px;
+        border: none;
+        &:hover{
+            background:#33333340 !important;
+            color:#ffffff !important;
+            border: none;
+        }
+        &:before{
+            display: inline-block;
+            font-family: 'icomoon';
+            font-style: normal;
+            font-weight: normal;
+            line-height: 1;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            content: '\e916';
+            font-size: 28px;
+            color: #fff;
+        }
     }
 }
 //Category
