change minicart css.

--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/_minicart.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/_minicart.less
@@ -188,7 +188,7 @@
             .actions {
                 position: relative;
                 left: -116px;
-                margin: -28px 0 0;
+                margin: -25px 0 0;
                 > .primary,
                 > .secondary {
                     display: inline;
@@ -421,7 +421,7 @@
                 }
             }
             .details-qty {
-                margin-top: @indent__s;
+                margin-top: 20px;
                 display: flex;
                 flex-flow: row-reverse;
                 position: relative;
