checkout style change.

--- a/app/code/Codazon/OneStepCheckout/view/frontend/web/template/shipping-method.html
+++ b/app/code/Codazon/OneStepCheckout/view/frontend/web/template/shipping-method.html
@@ -19,10 +19,10 @@
         line-height: 16px;
         color: #333333;
     }
-    #label_method_freeshipping_freeshipping, #label_method_flatrate_flatrate {
+    #label_method_freeshipping_freeshipping, #label_method_flatrate_flatrate, #label_method_flatrate_flatrateone, #label_method_flatrate_flatratetwo {
         display: none;
     }
-    #label_carrier_freeshipping_freeshipping, #label_carrier_flatrate_flatrate {
+    #label_carrier_freeshipping_freeshipping, #label_carrier_flatrate_flatrate, #label_carrier_flatrate_flatrateone, #label_carrier_flatrate_flatratetwo {
         font-style: normal;
         font-weight: normal;
         font-size: 14px;
