--- a/app/code/Codazon/OneStepCheckout/view/frontend/web/template/shipping-method.html
+++ b/app/code/Codazon/OneStepCheckout/view/frontend/web/template/shipping-method.html
@@ -28,6 +28,7 @@
         font-size: 14px;
         line-height: 16px;
         color: #333333;
+        cursor: pointer;
     }
     #checkout .osc #opc-sidebar .actions-toolbar {
         width: 44%;
@@ -111,7 +112,7 @@
         </div>
         <div class="custom-style-shoppin-method">
             See our
-            <a href="#">Shipping Policy</a>
+            <a href="/shipping-policy">Shipping Policy</a>
         </div>
     </div>
 </li>
