--- a/app/code/Mageplaza/Osc/view/frontend/web/template/container/authentication.html
+++ b/app/code/Mageplaza/Osc/view/frontend/web/template/container/authentication.html
@@ -23,7 +23,7 @@
 <!-- ko if: isActive() -->
 <div class="osc-authentication-wrapper">
     <a class="action action-auth-toggle osc-authentication-toggle social-login-btn">
-        <span data-bind="i18n: 'Already have an account? Click here to login'"></span>
+        <span data-bind="i18n: 'Sign In'"></span>
     </a>
 </div>
 <div class="block-authentication"
