--- a/app/code/Mageplaza/Osc/view/frontend/web/template/container/payment.html
+++ b/app/code/Mageplaza/Osc/view/frontend/web/template/container/payment.html
@@ -34,7 +34,7 @@
                 <!-- /ko -->
             </span>
         <!-- /ko -->
-        <span data-bind="i18n: 'Payment Methods'"></span>
+        <span data-bind="i18n: 'Step 3\: Payment Methods'"></span>
     </div>
     <div id="checkout-step-payment"
          class="step-content col-mp mp-12"
