--- a/app/code/Mageplaza/Osc/view/frontend/web/template/container/shipping.html
+++ b/app/code/Mageplaza/Osc/view/frontend/web/template/container/shipping.html
@@ -34,7 +34,7 @@
                     <strong class="fa-stack-1x fa-stack-text fa-inverse">2</strong>
                 </span>
             <!-- /ko -->
-            <span data-bind="i18n: 'Shipping Methods'"></span>
+            <span data-bind="i18n: 'Step 2\: Shipping Methods'"></span>
         </div>
         <!-- ko foreach: getRegion('before-shipping-method-form') -->
         <!-- ko template: getTemplate() --><!-- /ko -->
