--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/checkout/_checkout.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/checkout/_checkout.less
@@ -57,6 +57,7 @@
         .opc {
             &:extend(.abs-reset-list all);
 			.abs-block();
+            padding: 20px 0;
         }
 
         .step-title {
