--- a/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
@@ -1554,7 +1554,8 @@
     margin-bottom: 20px;
 }
 .product-main-content .product-info-main{
-    float: unset !important;
+    float: right !important;
+    margin-right: 16px;
 }
 .product-info-main .overview .title{
     margin-bottom: 12px;
