--- a/app/code/Mageplaza/Osc/view/frontend/web/css/style.css
+++ b/app/code/Mageplaza/Osc/view/frontend/web/css/style.css
@@ -33,12 +33,13 @@
 
 .page-title-wrapper {
     padding-left: 10px;
-    margin-bottom: 30px !important;
+    margin-top: 10px !important;
+    margin-bottom: 0 !important;
 }
 
 .one-step-checkout-wrapper {
     width: 100% !important;
-    margin-top: 20px;
+    margin-top: 0;
     padding: 0 !important;
 }
 
@@ -82,11 +83,21 @@
 
 /**************************************************** Authetication area ****************************************************/
 .osc-authentication-wrapper {
-    padding-left: 10px
+    padding-left: 10px;
+    text-align: right;
+    position: relative;
+    top: -55px;
+    font-size: 16px;
+    line-height: 19px;
 }
 
 .osc-authentication-toggle {
-    cursor: pointer
+    cursor: pointer;
+    color: #333333 !important;
+}
+
+.osc-authentication-toggle:hover {
+    text-decoration: unset;
 }
 
 .popup-authentication .block-authentication {
