--- a/app/code/Mageplaza/Osc/view/frontend/web/template/container/address/shipping-address.html
+++ b/app/code/Mageplaza/Osc/view/frontend/web/template/container/address/shipping-address.html
@@ -29,7 +29,7 @@
             <strong class="fa-stack-1x fa-stack-text fa-inverse">1</strong>
         </span>
         <!-- /ko -->
-        <span data-bind="i18n: 'Shipping Address'"></span>
+        <span data-bind="i18n: 'Step 1\: Shipping Address'"></span>
     </div>
     <div id="checkout-step-shipping"
          class="step-content"
