--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
@@ -3,7 +3,7 @@
 .no-padding{ padding:0;}
 .no-padding-left{padding-left:0 !important}
 .page-main .block.block-static-block {
-    margin-bottom: 24px;
+    margin-bottom: 0;
 }
 .abs-line-left{
 	position:relative;
@@ -471,6 +471,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 .box-product{
 	.lib-css(background, @main_block_background);
     border-radius: 4px;
+    margin-bottom: 24px;
 	//.lib-css(border, 1px solid @main_border);
 	.block-title{
 		.lib-css(border-bottom, 1px solid @main_border);
